@@ -1,4 +1,7 @@
-============================================================================
+2009-05-08  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* ogdi/drivers/vrf/feature.c: fix count type to be int32 to avoid
+	variable corruption on 64bit systems (#2787502).
 
 2008-05-28  Balint Cristian  <rezso@rdsor.ro>
 
